create file_handler test & swagger
